# GKlib

./: .gitignore  CMakeLists.txt  LICENSE.txt  LICENSES.md  Makefile  README.md
.github/workflows/: ci.yaml
LICENSES/: BSD-3-Clause-MT.txt
apps/: gkgraph.c  gkrw.c
include/: gk_arch.h  gk_mkrandom.h
